--- a/Classes/class1.html
+++ b/Classes/class1.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document Beta</title>
   </head>
   <body></body>
 </html>
