--- a/formatting.html
+++ b/formatting.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text Fromatting</title>
-</head>
-<body>
-    <p> Normal Text </p>
-    <p> <b>Bold</b> Text </p>
-    <p> <i>Italic</i> Text </p>
-    <p> <u>Underlined</u> Text </p>
-    <p> <del>Deleted</del> Text </p>
-    <p> <big>Big</big> Text </p>
-    <p> <small>Small</small> Text </p>
-    <p> <sub>Subscript</sub> Text </p>
-    <p> <tt>Monospaced</tt> Text </p>
-    <p> <mark>Markedup</mark> Text </p>
-
-</body>
+  </head>
+  <body>
+    <p>Normal Text</p>
+    <p><b>Bold</b> Text</p>
+    <p><i>Italic</i> Text</p>
+    <p><u>Underlined</u> Text</p>
+    <p><del>Deleted</del> Text</p>
+    <p><big>Big</big> Text</p>
+    <p><small>Small</small> Text</p>
+    <p><sub>Subscript</sub> Text</p>
+    <p><tt>Monospaced</tt> Text</p>
+    <p><mark>Markedup</mark> Text</p>
+    <p>hello</p>
+  </body>
 </html>
