--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -14,5 +14,16 @@
     <hr />
 
     <a href="index.html" target="_blank" title="open index"> Index </a>
+
+    <a
+      href="https://youtu.be/dQw4w9WgXcQ?si=hLXYXbSuJlLEFMHG"
+      target="_blank"
+      title="hehe :)"
+    >
+      <img
+        src="https://i.kym-cdn.com/photos/images/original/000/890/053/f87.gif"
+        height="40"
+      />
+    </a>
   </head>
 </html>
