--- a/formatting.html
+++ b/formatting.html
@@ -16,6 +16,7 @@
     <p><sub>Subscript</sub> Text</p>
     <p><tt>Monospaced</tt> Text</p>
     <p><mark>Markedup</mark> Text</p>
-    <p>hello</p>
+    <p><sup>Superscript</sup></p>
+    <p><em>Emphasize</em></p>
   </body>
 </html>
