--- a/tables.html
+++ b/tables.html
@@ -9,9 +9,17 @@
       type="image/png"
       href="Data/Images/photo_2024-04-19_21-22-52.jpg"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <style>
+        body {
+           font-family: "Indie Flower", cursive;
+        }
+    </style>
   </head>
   <body>
-    <table border="1" width="100%">
+    <table border="1" width="100%" >
         <caption><h2>Time Table<h2></caption>
       <tr style="background-color: aquamarine;" align="center" >
         <th>Day|Time</th>
