Minor Git Changes

--- a/Gitdemo.html
+++ b/Gitdemo.html
@@ -187,7 +187,14 @@
       />
     </div>
 
-    🏆 GitHub Trophies
+    <h2 align="left">🏆 GitHub Trophies</h2>
+    <img
+      src="https://github-profile-trophy.vercel.app/?username=ArjiJethin&theme=gruvbox&no-frame=false&no-bg=true&margin-w=4"
+      height="150"
+      alt="Git Trophies"
+    />
+
+    />
     ![](https://github-profile-trophy.vercel.app/?username=ArjiJethin&theme=tokyonight&no-frame=false&no-bg=true&margin-w=4)
     🔝 Top Contributed Repo
     ![](https://github-contributor-stats.vercel.app/api?username=ArjiJethin&limit=5&theme=dark&combine_all_yearly_contributions=true)
