Minor Git Directory Changes

--- a/Gitdemo.html
+++ b/Gitdemo.html
@@ -194,10 +194,12 @@
       alt="Git Trophies"
     />
 
+    <h2 align="left">🔝 Top Contributed Repo</h2>
+    <img
+      src="//github-contributor-stats.vercel.app/api?username=ArjiJethin&limit=5&theme=dark&combine_all_yearly_contributions=true"
+      height="400"
+      alt="Top Contributed Repo"
     />
-    ![](https://github-profile-trophy.vercel.app/?username=ArjiJethin&theme=tokyonight&no-frame=false&no-bg=true&margin-w=4)
-    🔝 Top Contributed Repo
-    ![](https://github-contributor-stats.vercel.app/api?username=ArjiJethin&limit=5&theme=dark&combine_all_yearly_contributions=true)
 
     <br clear="both" />
 
