Minor Changes to the data

--- a/Gitdemo.html
+++ b/Gitdemo.html
@@ -212,10 +212,14 @@
 
     <br clear="both" />
 
-    <img
-      align="left"
-      src="https://visitor-badge.laobi.icu/badge?page_id=ArjiJethin.ArjiJethin&left_color=darkcyan&left_text=Profile%20Views"
-    />
+    <a
+      href="https://visitor-badge.laobi.icu/badge?page_id=ArjiJethin.ArjiJethin&left_color=darkcyan&left_text=Profile%20Views"
+    >
+      <img
+        align="left"
+        src="https://visitor-badge.laobi.icu/badge?page_id=ArjiJethin.ArjiJethin&left_color=darkcyan&left_text=Profile%20Views"
+      />
+    </a>
 
     <a
       href="https://youtu.be/dQw4w9WgXcQ?si=hLXYXbSuJlLEFMHG"
