--- a/Classes/class4.html
+++ b/Classes/class4.html
@@ -23,6 +23,10 @@
     H<sub>2</sub>O
     X<sup>2</sup>+Y<sup>2</sup>
     <mark>Marked Text</mark>
+    <s>Strikethrough Text</s>
+    <q>Quoted ext</q>
+    <del><ins><mark>Mixed Markup</mark></ins></del>
+
     </pre>
   </body>
 </html>
