--- a/Classes/class4.html
+++ b/Classes/class4.html
@@ -25,6 +25,7 @@
     <mark>Marked Text</mark>
     <s>Strikethrough Text</s>
     <q>Quoted ext</q>
+    <abbr title="Text Pop Up">Abbrevated Text</abbr>
     <del><ins><mark>Mixed Markup</mark></ins></del>
 
     </pre>
