--- a/Classes/class4.html
+++ b/Classes/class4.html
@@ -10,7 +10,7 @@
     />
     <title>Class4</title>
   </head>
-  <body>
+  <body style="background-color: black; color: aliceblue">
     <pre>
     <b>Bold Text</b>
     <i>Italic Text</i>
@@ -25,9 +25,21 @@
     <mark>Marked Text</mark>
     <s>Strikethrough Text</s>
     <q>Quoted ext</q>
+    <cite>Cited Text</cite>
+
+    <bdo dir="rtl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic culpa, aperiam suscipit</bdo>
+    <bdo dir="ltr">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, velit!</bdo>
+
     <abbr title="Text Pop Up">Abbrevated Text</abbr>
     <del><ins><mark>Mixed Markup</mark></ins></del>
-
     </pre>
+    <p>
+    <address>
+      Arji Jethin <br>
+      NO.69, Air Street
+      2<sup>nd</sup> cross, India<br>
+      Earth
+    </address>
+    </p>
   </body>
 </html>
