--- a/Classes/class5.html
+++ b/Classes/class5.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpeg" href="C:\Users\arjij\OneDrive\Desktop\Web\Data\Images\photo_2024-04-19_21-22-52.jpg">
-    <link rel="stylesheet" href="style.css">
-    <title>Class5</title>   
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpeg"
+    href="Media/Images/photo_2024-04-19_21-22-52.jpg""
+    <link rel="stylesheet" href="style.css" />
+    <title>Class5</title>
+  </head>
+  <body>
     <h1>Unordered List</h1>
     <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
     </ul>
 
     <h1>Ordered List</h1>
     <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
     </ol>
-</body>
+  </body>
 </html>
