--- a/Classes/class1.html
+++ b/Classes/class1.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpeg" href="Media/Images/photo_2024-04-19_21-22-52.jpg">
     <title>Document Beta</title>
   </head>
   <body></body>
