--- a/Classes/class2.html
+++ b/Classes/class2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>class1</title>
+    <link rel="icon" type="text/jpg href="Media/Images/photo_2024-04-19_21-22-52">
   </head>
 
   <body>
