--- a/Classes/class3.html
+++ b/Classes/class3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon"
     type="image/jpg"
-    href="Data/Images/photo_2024-04-19_21-22-52"
+    href="Media/Images/photo_2024-04-19_21-22-52.jpg"
     />
     <title>Demo Paget</title>
 </head>
