--- a/formatting.html
+++ b/formatting.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text Fromatting</title>
+    <link rel="icon" type="image/jpeg" href="Data/Images/photo_2024-04-19_21-22-52.jpg">
   </head>
   <body>
     <p>Normal Text</p>
