--- a/Classes/class6.html
+++ b/Classes/class6.html
@@ -17,7 +17,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a style="color: red" href="https://www.google.co.in" target="_blank">
+    <a
+      style="background-color: red"
+      href="https://www.google.co.in"
+      target="_blank"
+    >
       <h3>Hyperlink</h3>
     </a>
 
