--- a/Classes/class7.html
+++ b/Classes/class7.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>class7</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="Media/Images/photo_2024-04-19_21-22-52.jpg"
+    />
   </head>
-  <body></body>
+  <body>
+    <img
+      src="Media/Images/planet_landscape_flash_141807_3840x2160.jpg"
+      alt="Space Wallpaper"
+      height="400px"
+      width=""
+    />
+    <picture>
+      <source
+        srcset="../Data\Images\planet_landscape_flash_141807_3840x2160.jpg"
+      />
+      <img
+        src="../Data/Images/planet_landscape_flash_141807_3840x2160.jpg"
+        alt="Space Wallpaper"
+        height="400px"
+        width=""
+      />
+    </picture>
+  </body>
 </html>
