--- a/Classes/class8.html
+++ b/Classes/class8.html
@@ -9,6 +9,7 @@
       type="image/png"
       href="../Data/Images/photo_2024-04-19_21-22-52.jpg"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="#section4">Section 4</a>
