--- a/Classes/Assignments/Assignment1.html
+++ b/Classes/Assignments/Assignment1.html
@@ -4,6 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Working with Images</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../Data/Images/icons8-books-96.png"
+    />
   </head>
-  <body></body>
+  <body style="padding: 10px 100px">
+    <h1>Working with Images</h1>
+    <hr style="background-color: red; height: 1px" />
+    <img
+      style="float: left; margin: 30px 30px 30px 0px; border: 4px solid black"
+      src="../../Data/Images/bouncy-open-book-glasses-and-stars.gif"
+      alt="Image 1"
+      height="200px"
+      width="300px"
+    />
+    <p style="text-align: justify">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo laborum
+      voluptatum est officiis voluptate a, dicta quo neque, commodi, facilis
+      quos iure maxime atque praesentium voluptas doloremque nisi ipsam! A natus
+      magni impedit, totam atque debitis reprehenderit accusantium quibusdam
+      culpa cumque enim sapiente ipsam, beatae ratione amet? Perspiciatis soluta
+      ad harum earum eos fugit unde, eius eum deleniti quis quibusdam et ipsam
+      quod voluptatem praesentium enim at minima dolorum itaque expedita
+      doloribus delectus temporibus? Sunt reiciendis, culpa illum expedita
+      commodi cum eius soluta sed obcaecati sequi voluptatum. Ratione amet saepe
+      voluptatibus consequuntur quaerat rem, atque natus facilis repudiandae
+      obcaecati est quidem eius culpa perferendis ipsum molestias aliquam ullam
+      fuga distinctio nobis non dicta nisi? Quibusdam sed veritatis, omnis esse
+      fugit tempore optio, deserunt numquam dolor vel autem accusamus
+      exercitationem impedit repellat architecto, similique quos consequatur
+      temporibus a enim explicabo minima pariatur eum! Fugit asperiores a
+      dignissimos ab et deserunt accusamus nostrum rem nam modi minima
+      praesentium veritatis
+    </p>
+    <img
+      style="float: right; margin: 0px 0px 20px 30px; border: 4px solid black"
+      src="../../Data/Images/taxi-computer-monitor-with-book-mortarboard-and-stationery-for-online-education.gif"
+      alt="Image 2"
+      height="300px"
+    />
+    <p style="text-align: justify">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo laborum
+      voluptatum est officiis voluptate a, dicta quo neque, commodi, facilis
+      quos iure maxime atque praesentium voluptas doloremque nisi ipsam! A natus
+      magni impedit, totam atque debitis reprehenderit accusantium quibusdam
+      culpa cumque enim sapiente ipsam, beatae ratione amet? Perspiciatis soluta
+      ad harum earum eos fugit unde, eius eum deleniti quis quibusdam et ipsam
+      quod voluptatem praesentium enim at minima dolorum itaque expedita
+      doloribus delectus temporibus? Sunt reiciendis, culpa illum expedita
+      commodi cum eius soluta sed obcaecati sequi voluptatum. Ratione amet saepe
+      voluptatibus consequuntur quaerat rem, atque natus facilis repudiandae
+      obcaecati est quidem eius culpa perferendis ipsum molestias aliquam ullam
+      fuga distinctio nobis non dicta nisi? Quibusdam sed veritatis, omnis esse
+      fugit tempore optio, deserunt numquam dolor vel autem accusamus
+      exercitationem impedit repellat architecto, similique quos consequatur
+      temporibus a enim explicabo minima pariatur eum! Fugit asperiores a
+      dignissimos ab et deserunt accusamus nostrum rem nam modi minima
+      praesentium veritatis
+    </p>
+
+    <img
+      style="float: left; margin: 15px 30px 30px 0px; border: 4px solid black"
+      src="../../Data/Images/bendy-pumpkin-basket-with-sweets-candles-and-books.gif"
+      alt="Image 3"
+      height="200px"
+    />
+
+    <p style="text-align: justify">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo laborum
+      voluptatum est officiis voluptate a, dicta quo neque, commodi, facilis
+      quos iure maxime atque praesentium voluptas doloremque nisi ipsam! A natus
+      magni impedit, totam atque debitis reprehenderit accusantium quibusdam
+      culpa cumque enim sapiente ipsam, beatae ratione amet? Perspiciatis soluta
+      ad harum earum eos fugit unde, eius eum deleniti quis quibusdam et ipsam
+      quod voluptatem praesentium enim at minima dolorum itaque expedita
+      doloribus delectus temporibus? Sunt reiciendis, culpa illum expedita
+      commodi cum eius soluta sed obcaecati sequi voluptatum. Ratione amet saepe
+      voluptatibus consequuntur quaerat rem, atque natus facilis repudiandae
+      obcaecati est quidem eius culpa perferendis ipsum molestias aliquam ullam
+      fuga distinctio nobis non dicta nisi? Quibusdam sed veritatis, omnis esse
+      fugit tempore optio, deserunt numquam dolor vel autem accusamus
+      exercitationem impedit repellat architecto, similique quos consequatur
+      temporibus a enim explicabo minima pariatur eum! Fugit asperiores a
+      dignissimos ab et deserunt accusamus nostrum rem nam modi minima
+      praesentium veritatis
+    </p>
+  </body>
 </html>
