--- a/Classes/Assignments/practice.html
+++ b/Classes/Assignments/practice.html
@@ -16,7 +16,7 @@
         height: 100vh;
         margin: 0;
         padding: 0;
-        overflow-y: hidden;
+        overflow: hidden;
       }
 
       .ground {
@@ -24,28 +24,26 @@
         height: 15%;
         background-color: black;
         position: fixed;
-        top: 90%;
+        bottom: 0;
       }
 
       #Dude {
         position: relative;
         top: 60%;
         z-index: 1;
-        filter: brightness(0.7);
       }
 
       .Rocket {
         position: absolute;
         bottom: -100px; /* Start off-screen */
-        left: 35%;
-        animation: moveUp 15s linear infinite;
-        height: 80px;
-        opacity: 70%;
+        left: 50%;
+        transform: translateX(-50%);
+        animation: moveUp 5s linear infinite; /* Animation for moving up */
       }
 
       @keyframes moveUp {
         0% {
-          bottom: 30px; /* Start position */
+          bottom: -100px; /* Start position */
         }
         100% {
           bottom: 100%; /* End position */
@@ -56,13 +54,11 @@
   <body>
     <marquee id="Dude" scrollamount="12" direction="left">
       <img
-        id="Dude"
         src="../../Data/Images/walking-1.gif"
         height="250px"
         alt="More hell"
       />
       <img
-        id="Dude"
         style="position: relative; top: 90%; margin-bottom: 19px"
         src="../../Data/Images/doggo.gif"
         height="100px"
