--- a/Classes/Assignments/Assignment4.html
+++ b/Classes/Assignments/Assignment4.html
@@ -6,6 +6,21 @@
     <title>Marquee Image</title>
     <link rel="icon" type="image/gif"
     href="../../Data/Images/dazzle-two-books-with-a-bookmark.gif" ">
+    <style>
+      @keyframes swipe {
+        0% {
+          transform: translateX(-100%);
+        }
+        100% {
+          transform: translateX(100%);
+        }
+      }
+
+      .roll {
+        /* padding: 50px; */
+        animation: swipe 3s linear infinite;
+      }
+    </style>
   </head>
   <body style="padding: 10px 30px 30px 30px">
     <h1>Image in Marquee</h1>
@@ -40,67 +55,55 @@
       dolorum deserunt adipisci, consectetur magni? Repellat, molestiae?
     </p>
     <hr />
-    <marquee scrollamount="100" direction="right">
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
-      <img
-        src="../../Data/Images/kingdom-1188.gif"
-        alt="Maruee Image"
-        height="150px"
-      />
+    <marquee scrollamount="50" direction="right">
+      <div class="roll">
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+
+        <img
+          src="../../Data/Images/kingdom-1188.gif"
+          alt="Maruee Image"
+          height="150px"
+        />
+      </div>
     </marquee>
     <hr />
   </body>
