--- a/Classes/Assignments/Assignment2.html
+++ b/Classes/Assignments/Assignment2.html
@@ -29,8 +29,8 @@
       <p>Welcome to INFOMAX Official Website</p>
     </marquee>
     <hr />
-    <marquee scrollamount="10" direction="up">
-      <p style="text-align: center">
+    <marquee scrollamount="5" direction="up">
+      <p style="text-align: center; color: white">
         Advised not to mess up the registration form
       </p>
     </marquee>
