--- a/practice.html
+++ b/practice.html
@@ -50,5 +50,45 @@ autem minus. Magni?</pre
         <source src="Data/Audio/Audio1.mp3" type="audio/mpeg" />
       </audio>
     </a>
+
+    <img style="border-radius: 25vh;" src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="linkedin logo"  />
   </body>
+
+  <div align="left">
+    <a href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/" target="_blank" style="display: inline-block; margin: 0;">
+      <img style="border-radius: 25vh;" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" height="40" width="60" alt="linkedin logo" />
+    </a>
+    <a href="https://www.instagram.com/eswararji07/" target="_blank" style="display: inline-block; margin: 0;">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" height="40" width="60" alt="instagram logo" />
+    </a>
+    <a href="https://www.youtube.com/@mrphoenix2518" target="_blank" style="display: inline-block; margin: 0;">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg" height="40" width="60" alt="youtube logo" />
+    </a>
+    <a href="https://x.com/ArjiJethin51993" target="_blank" style="display: inline-block; margin: 0;">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" height="40" width="60" alt="twitter logo" />
+    </a>
+    <a href="mailto:arjijethin.ac2207@gmail.com" target="_blank" style="display: inline-block; margin: 0;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" height="40" width="60" alt="gmail logo" />
+    </a>
+  </div>
+  
+  <div align="left">
+    <a href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/" target="_blank">
+      <img style="border-radius: 25vh;" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" height="40" width="60" alt="linkedin logo"  />
+    </a>
+    <a href="https://www.instagram.com/eswararji07/" target="_blank">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" height="40" width="60" alt="instagram logo"  />
+    </a>
+    <a href="https://www.youtube.com/@mrphoenix2518" target="_blank">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg" height="40" width="60" alt="youtube logo"  />
+    </a>
+    <a href="https://x.com/ArjiJethin51993" target="_blank">
+      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" height="40" width="60" alt="twitter logo"  />
+    </a>
+    <a href="mailto:arjijethin.ac2207@gmail.com" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" height="40" width="60" alt="gmail logo"  />
+    </a>
+  </div>
+
+  
 </html>
