--- a/practice.html
+++ b/practice.html
@@ -51,44 +51,214 @@ autem minus. Magni?</pre
       </audio>
     </a>
 
-    <img style="border-radius: 25vh;" src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge" height="35" alt="linkedin logo"  />
+    <img
+      style="border-radius: 25vh"
+      src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge"
+      height="35"
+      alt="linkedin logo"
+    />
   </body>
 
   <div align="left">
-    <a href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/" target="_blank" style="display: inline-block; margin: 0;">
-      <img style="border-radius: 25vh;" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" height="40" width="60" alt="linkedin logo" />
+    <a
+      href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/"
+      target="_blank"
+      style="display: inline-block; margin: 0"
+    >
+      <img
+        style="border-radius: 25vh"
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg"
+        height="40"
+        width="60"
+        alt="linkedin logo"
+      />
     </a>
-    <a href="https://www.instagram.com/eswararji07/" target="_blank" style="display: inline-block; margin: 0;">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" height="40" width="60" alt="instagram logo" />
+    <a
+      href="https://www.instagram.com/eswararji07/"
+      target="_blank"
+      style="display: inline-block; margin: 0"
+    >
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg"
+        height="40"
+        width="60"
+        alt="instagram logo"
+      />
     </a>
-    <a href="https://www.youtube.com/@mrphoenix2518" target="_blank" style="display: inline-block; margin: 0;">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg" height="40" width="60" alt="youtube logo" />
+    <a
+      href="https://www.youtube.com/@mrphoenix2518"
+      target="_blank"
+      style="display: inline-block; margin: 0"
+    >
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg"
+        height="40"
+        width="60"
+        alt="youtube logo"
+      />
     </a>
-    <a href="https://x.com/ArjiJethin51993" target="_blank" style="display: inline-block; margin: 0;">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" height="40" width="60" alt="twitter logo" />
+    <a
+      href="https://x.com/ArjiJethin51993"
+      target="_blank"
+      style="display: inline-block; margin: 0"
+    >
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg"
+        height="40"
+        width="60"
+        alt="twitter logo"
+      />
     </a>
-    <a href="mailto:arjijethin.ac2207@gmail.com" target="_blank" style="display: inline-block; margin: 0;">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" height="40" width="60" alt="gmail logo" />
-    </a>
-  </div>
-  
-  <div align="left">
-    <a href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/" target="_blank">
-      <img style="border-radius: 25vh;" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" height="40" width="60" alt="linkedin logo"  />
-    </a>
-    <a href="https://www.instagram.com/eswararji07/" target="_blank">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" height="40" width="60" alt="instagram logo"  />
-    </a>
-    <a href="https://www.youtube.com/@mrphoenix2518" target="_blank">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg" height="40" width="60" alt="youtube logo"  />
-    </a>
-    <a href="https://x.com/ArjiJethin51993" target="_blank">
-      <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" height="40" width="60" alt="twitter logo"  />
-    </a>
-    <a href="mailto:arjijethin.ac2207@gmail.com" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" height="40" width="60" alt="gmail logo"  />
+    <a
+      href="mailto:arjijethin.ac2207@gmail.com"
+      target="_blank"
+      style="display: inline-block; margin: 0"
+    >
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg"
+        height="40"
+        width="60"
+        alt="gmail logo"
+      />
     </a>
   </div>
 
-  
+  <div align="left">
+    <a
+      href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/"
+      target="_blank"
+    >
+      <img
+        style="border-radius: 25vh"
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg"
+        height="40"
+        width="60"
+        alt="linkedin logo"
+      />
+    </a>
+    <a href="https://www.instagram.com/eswararji07/" target="_blank">
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg"
+        height="40"
+        width="60"
+        alt="instagram logo"
+      />
+    </a>
+    <a href="https://www.youtube.com/@mrphoenix2518" target="_blank">
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg"
+        height="40"
+        width="60"
+        alt="youtube logo"
+      />
+    </a>
+    <a href="https://x.com/ArjiJethin51993" target="_blank">
+      <img
+        src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg"
+        height="40"
+        width="60"
+        alt="twitter logo"
+      />
+    </a>
+    <a href="mailto:arjijethin.ac2207@gmail.com" target="_blank">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg"
+        height="40"
+        width="60"
+        alt="gmail logo"
+      />
+    </a>
+  </div>
+
+  <h1 style="display: flex; justify-content: center; align-items: center">
+    Bonjour
+    <img
+      src="https://user-images.githubusercontent.com/74038190/216120974-24a76b31-7f39-41f1-a38f-b3c1377cc612.png"
+      height="40"
+      alt="Greeting"
+      style="margin: 0 10px"
+    />
+    I'm Arji Jethin
+  </h1>
+
+  <h1 align="center">
+    <table>
+      <tr>
+        <td>Bonjour</td>
+        <td>
+          <img
+            src="https://user-images.githubusercontent.com/74038190/216120974-24a76b31-7f39-41f1-a38f-b3c1377cc612.png"
+            height="40"
+            alt="Greeting"
+          />
+        </td>
+        <td>I'm Arji Jethin</td>
+      </tr>
+    </table>
+  </h1>
+
+  <h1 align="center">
+    Bonjour
+    <img
+      src="https://user-images.githubusercontent.com/74038190/216120974-24a76b31-7f39-41f1-a38f-b3c1377cc612.png"
+      height="40"
+      alt="Greeting"
+    />
+    I'm Arji Jethin
+  </h1>
+
+
+
+
+
+  <h3 align="left">
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235223604-c9f38e6d-e9df-4608-abeb-ae7fbdf46bfd.gif"
+      height="20px"
+    />
+    About Me
+  </h3>
+  <p align="left">
+    ➤
+      <img
+        src="https://user-images.githubusercontent.com/74038190/236119650-f49991cf-21c3-46ef-a947-760ab27a10d0.gif"
+        height="20px"
+      />
+      I’m currently Sophomore student at Dayananda Sagar University <br />➤
+      <img
+        src="https://user-images.githubusercontent.com/74038190/216122041-518ac897-8d92-4c6b-9b3f-ca01dcaf38ee.png"
+        height="20px"
+      />
+      Interested in SDE, FSD, UI/UX, VR<br />➤
+      <img
+        src="https://user-images.githubusercontent.com/74038190/235223599-0eadbd7c-c916-4f24-af9d-9242730e6172.gif"
+        height="20px"
+      />
+      I’m currently learning HTML, CSS, JavaScript, JAVA, C, C++<br />➤
+      <img
+        src="https://user-images.githubusercontent.com/74038190/218265814-3084a4ba-809c-4135-afc0-8685d0f634b3.gif"
+        height="20px"
+      />
+      Fun fact, I think I am Funny :) <br />
+      ➤
+      <img
+        src="https://user-images.githubusercontent.com/74038190/235223585-049a7ac0-b529-416d-b504-ed24aea7d99b.gif"
+        height="20px"
+      />
+      How to reach me: 
+      <a href="mailto:arjijethin.ac0705@gmail.com" target="_blank">
+        arjijethin.ac2207@gmail.com
+      </a>
+    </b>
+  </p>
+
+  <h1 align="center"><b>Bonjour, I'm Arji Jethin <img src="https://user-images.githubusercontent.com/74038190/226127923-0e8b7792-7b3c-462b-951b-63c96ba1a5af.gif" height="35px"></b></h1>
+  <h3  align="center">A Coding Enthusiast, currently a Universtiy Student</h3>
+
+  <h1 align="center"><b>Bonjour, I'm Arji Jethin 
+    <img src="https://user-images.githubusercontent.com/74038190/226127923-0e8b7792-7b3c-462b-951b-63c96ba1a5af.gif" height="35px">
+</b></h1>
+<h3 align="center">A Coding Enthusiast, currently a University Student</h3>
+
+
 </html>
