--- a/media.html
+++ b/media.html
@@ -20,5 +20,10 @@
         height="100"
       />
     </body>
+
+    <video width="320" height="240" autoplay>
+      <source src="Data/Images/neon-cyberpunk-samurai.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
   </a>
 </html>
