--- a/Classes/class10.html
+++ b/Classes/class10.html
@@ -14,36 +14,45 @@
       body {
         padding: 200px;
         font-family: cursive;
+        background-color: aqua;
+        filter: blur(2px);
+        z-index: 4;
+      }
+      .hehe {
+        z-index: 3;
+        filter: blur(0px);
       }
     </style>
   </head>
   <body>
-    <h1 align="center">Forms in HTML</h1>
-    <form
-      align="center"
-      action="url"
-      method="post"
-      accept-charset="UTF-16"
-      autocomplete="off"
-      enctype="application/x-www-form-urlencoded"
-    >
-      <label for="fname">First Name:</label>
-      <input type="text" placeholder="First Name" name="" id="fname" />
-      <br />
-      <br />
-      <label for="sname">Last Name: </label>
-      <input type="text" placeholder="Last Name" name="" id="sname" />
-      <br />
-      <br />
-      <label for="dob">Date of Birth: </label>
-      <input type="date" name="" id="dob" /> <br /><br />
-      <button type="submit">Submit</button>
-      <button type="reset">Reset</button>
+    <div class="hehe">
+      <h1 align="center">Forms in HTML</h1>
+      <form
+        align="center"
+        action="url"
+        method="post"
+        accept-charset="UTF-16"
+        autocomplete="off"
+        enctype="application/x-www-form-urlencoded"
+      >
+        <label for="fname">First Name:</label>
+        <input type="text" placeholder="First Name" name="" id="fname" />
+        <br />
+        <br />
+        <label for="sname">Last Name: </label>
+        <input type="text" placeholder="Last Name" name="" id="sname" />
+        <br />
+        <br />
+        <label for="dob">Date of Birth: </label>
+        <input type="date" name="" id="dob" /> <br /><br />
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
 
-      <select name="editors" id="">
-        <option value="vscode">Visual Studio Code</option>
-        <option value="Sublime">Sublime Text</option>
-      </select>
-    </form>
+        <select name="editors" id="">
+          <option value="vscode">Visual Studio Code</option>
+          <option value="Sublime">Sublime Text</option>
+        </select>
+      </form>
+    </div>
   </body>
 </html>
