--- a/Classes/class10.html
+++ b/Classes/class10.html
@@ -17,6 +17,9 @@
         background-color: aqua;
         filter: blur(2px);
         z-index: 4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       .hehe {
         z-index: 3;
@@ -28,7 +31,6 @@
     <div class="hehe">
       <h1 align="center">Forms in HTML</h1>
       <form
-        align="center"
         action="url"
         method="post"
         accept-charset="UTF-16"
