--- a/Classes/class11.html
+++ b/Classes/class11.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <h1 align="center">H1 Header tag</h1>
-    <h2>H2 Header tag</h1>
-    <div>This is a Div Tag</div>
+    <h2 align="center">H2 Header tag</h1>
+    <div align="center">This is a Div Tag</div>
     <br>
-    <span>This is a span tag</span>
+    <span align="center">This is a span tag</span>
   </body>
 </html>
